0.003 ???
    - Add support for ChromeDriver.
    - Document how to use different backends.
    - Add cookie getter/setter.
    - Rename delete_cookie to cookie_delete.
    - Add support for asynchronous JavaScript.
    - Rename execute to js.
    - Rename execute_phantom to js_phantom.
    - Add append, split, and uniq methods to element collections.

0.002 2015-07-05
    - $drv->() caches the closure and is now twice as fast.
    - $drv->base_url('foo'), and $drv->window_maximize now return $self.

0.001 2015-06-09
    - Initial release.